<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/survey_confirmation_topLayout"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">
	<TextView
		android:textAppearance="?android:attr/textAppearanceLarge"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    android:text="@string/survey_confirmation_title"
	    android:id="@+id/survey_confirmation_message"
	    android:gravity="center_vertical|center_horizontal"
	    android:layout_weight="1"></TextView>
	<TextView
		android:textAppearance="?android:attr/textAppearanceMedium"
	    android:id="@+id/survey_confirmation_subtitle"
	    android:text="@string/survey_confirmation_subtitle"
	    android:gravity="center_vertical|center_horizontal"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_weight="1"></TextView>
	<LinearLayout
		android:id="@+id/survey_confirmation_buttonsLayout"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center_vertical|center_horizontal"
	    android:layout_weight="1">
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/survey_confirmation_confirmButton"
			android:text="@string/survey_confirmation_confirm"
			android:drawableLeft="@drawable/blue_settings_medium"
			android:layout_margin="5dip"
			android:layout_weight="1"></Button>
		<Button 
			android:text="@string/survey_confirmation_back"
			android:layout_width="fill_parent"
			android:id="@+id/survey_confirmation_backButton"
			android:drawableLeft="@drawable/blue_settings_medium"
			android:layout_height="wrap_content"
		    android:layout_margin="5dip"
		    android:layout_weight="1"></Button>
	</LinearLayout>
</LinearLayout>