<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Sema Berkiten, Vladimir Costescu, Henry Liu, Diego Vargas,
Austin Walker, and Tony Xiao

This file is part of Survey Droid.

Survey Droid is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Survey Droid is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Survey Droid.  If not, see <http://www.gnu.org/licenses/>. 
 -->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/survey_confirmation_topLayout"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">
	<TextView
		android:textAppearance="?android:attr/textAppearanceLarge"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    android:text="@string/survey_confirmation_title"
	    android:id="@+id/survey_confirmation_message"
	    android:gravity="center_vertical|center_horizontal"
	    android:layout_weight="1"></TextView>
	<TextView
		android:textAppearance="?android:attr/textAppearanceMedium"
	    android:id="@+id/survey_confirmation_subtitle"
	    android:text="@string/survey_confirmation_subtitle"
	    android:gravity="center_vertical|center_horizontal"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_weight="1"></TextView>
	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/survey_confirmation_confirmButton"
		android:text="@string/survey_confirmation_confirm"
		android:drawableLeft="@drawable/forward"
		android:layout_margin="5dip"></Button>
	<Button 
		android:text="@string/survey_confirmation_back"
		android:layout_width="fill_parent"
		android:id="@+id/survey_confirmation_backButton"
		android:drawableLeft="@drawable/back"
		android:layout_height="wrap_content"
	    android:layout_margin="5dip"></Button>
</LinearLayout>