<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   	xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/multiple_choice_topLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout="center">
    <LinearLayout
    	android:id="@+id/multiple_choice_horizLayout"
	    android:layout_width="fill_parent"
	    android:orientation="horizontal"
	    android:layout_weight="1"
	    android:layout_height="wrap_content">
	    <TextView
		    android:text="@string/question_loading_text"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:layout_height="wrap_content"
		    android:id="@+id/multiple_choice_question"
		    android:layout_width="wrap_content"
		    android:layout_gravity="center"></TextView>
		<ListView
			android:layout_weight="1"
			android:id="@android:id/list"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"></ListView>
	</LinearLayout>
	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/multiple_choice_buttonsLayout"
    	android:layout_gravity="center">
        <Button
        	android:id="@+id/multiple_choice_backButton"
        	android:text="@string/question_backButton"
        	android:layout_height="wrap_content"
        	android:layout_width="100dip"
        	android:layout_weight="1"></Button>
        <Button
        	android:id="@+id/multiple_choice_nextButton"
        	android:text="@string/question_nextButton"
        	android:layout_height="wrap_content"
        	android:layout_width="100dip"
        	android:layout_weight="1"></Button>
    </LinearLayout>
</LinearLayout>
    