<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Sema Berkiten, Vladimir Costescu, Henry Liu, Diego Vargas,
Austin Walker, and Tony Xiao

This file is part of Survey Droid.

Survey Droid is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Survey Droid is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Survey Droid.  If not, see <http://www.gnu.org/licenses/>. 
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_topLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">
    <TextView
    	android:textAppearance="?android:attr/textAppearanceLarge"
	    android:id="@+id/id_title"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content" 
	    android:text="@string/id_title"></TextView>
	<TextView
		android:textSize="36sp"
		android:id="@+id/id_id"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/id_defaultHoriz"
		android:layout_weight="1"
		android:gravity="center"></TextView>
	<Button
		android:id="@+id/id_backButton" 
		android:layout_height="wrap_content"
		android:layout_width="100dip"
		android:drawableLeft="@drawable/exit_small"
		android:text="@string/id_backButton"></Button>
</LinearLayout>