<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    	xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/main_topLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
        <TextView
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/main_title"
	        android:id="@+id/main_title"
	        android:layout_width="wrap_content"
	        android:padding="10dip"></TextView>
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:id="@+id/main_lowerLayout">
            <LinearLayout
	            android:layout_height="fill_parent"
	            android:orientation="vertical"
	            android:id="@+id/main_buttonsLayout"
	            android:layout_width="wrap_content"
	            android:layout_weight="2">
                <Button
	        		android:textAppearance="?android:attr/textAppearanceLarge"
	                android:layout_height="wrap_content"
	                android:layout_gravity="left|center_vertical"
	                android:text="@string/main_settingsButton"
	                android:drawableLeft="@drawable/blue_settings_medium"
	                android:id="@+id/main_settingsButton"
	                android:layout_weight="1" android:layout_width="fill_parent"></Button>
                <Button
	        		android:textAppearance="?android:attr/textAppearanceLarge"
	                android:text="@string/main_sampleButton"
	                android:layout_width="fill_parent"
	                android:id="@+id/main_sampleButton"
	                android:layout_height="wrap_content"
	                android:drawableLeft="@drawable/blue_survey_medium"
	                android:layout_gravity="center_vertical"
	                android:layout_weight="1"></Button>
                <Button
	        		android:textAppearance="?android:attr/textAppearanceLarge"
	                android:text="@string/main_callButton"
	                android:layout_width="fill_parent"
	                android:id="@+id/main_callButton"
	                android:layout_height="wrap_content"
	                android:drawableLeft="@drawable/blue_call_medium"
	                android:layout_gravity="center_vertical"
	                android:layout_weight="1"></Button>
                <Button
                	android:textAppearance="?android:attr/textAppearanceLarge"
	                android:text="@string/main_exitButton"
	                android:id="@+id/main_exitButton"
	                android:layout_height="wrap_content"
	                android:drawableLeft="@drawable/blue_back_medium"
	                android:layout_gravity="center_vertical"
	                android:layout_weight="1" android:layout_width="fill_parent"></Button>
            </LinearLayout>
            <LinearLayout
	            android:layout_width="wrap_content"
	            android:orientation="vertical"
	            android:id="@+id/main_progressBarLayout"
	            android:layout_height="fill_parent"
	            android:layout_gravity="top|right"
	            android:layout_weight="1">
                <TextView
	                android:layout_width="wrap_content"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:layout_height="wrap_content"
	                android:text="@string/main_progressTitle"
	                android:id="@+id/main_progessTitle"></TextView>
	            <LinearLayout
	            	android:layout_width="fill_parent"
	            	android:layout_height="fill_parent"
	            	android:orientation="horizontal">
	            	<FrameLayout
	            		android:layout_width="wrap_content"
	            		android:layout_height="wrap_content"
	            		android:layout_weight="1"></FrameLayout>
		           	<org.peoples.android.VerticalProgressBar
		           		android:layout_width="wrap_content"
		           		android:layout_height="fill_parent"
	   					android:progressDrawable="@drawable/progress_vertical"
		           		android:id="@+id/main_progressBar"></org.peoples.android.VerticalProgressBar>
	            	<FrameLayout
	            		android:layout_width="wrap_content"
	            		android:layout_height="wrap_content"
	            		android:layout_weight="1"></FrameLayout>
		        </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
