<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Sema Berkiten, Vladimir Costescu, Henry Liu, Diego Vargas,
Austin Walker, and Tony Xiao

This file is part of Survey Droid.

Survey Droid is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Survey Droid is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Survey Droid.  If not, see <http://www.gnu.org/licenses/>. 
 -->
    <LinearLayout
    	xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/main_topLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
        <TextView
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/main_title"
	        android:id="@+id/main_title"
	        android:layout_width="wrap_content"
	        android:padding="5dip"></TextView>
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:id="@+id/main_lowerLayout">
            <LinearLayout
	            android:layout_height="fill_parent"
	            android:orientation="vertical"
	            android:id="@+id/main_buttonsLayout"
	            android:layout_width="wrap_content"
	            android:layout_weight="2">
	            <LinearLayout
	            	android:layout_height="fill_parent"
	            	android:orientation="horizontal"
	            	android:id="@+id/main_topButtonsLayout"
	            	android:layout_width="fill_parent"
	            	android:layout_weight="1">
	                <Button
		        		android:textAppearance="?android:attr/textAppearanceLarge"
		                android:text="@string/main_sampleButton"
		                android:layout_width="fill_parent"
		                android:id="@+id/main_sampleButton"
		                android:layout_height="wrap_content"
		                android:drawableLeft="@drawable/survey"
		                android:layout_gravity="center_vertical"
		                android:layout_weight="1"></Button>
	                <Button
		        		android:textAppearance="?android:attr/textAppearanceLarge"
		                android:layout_height="wrap_content"
		                android:layout_gravity="left|center_vertical"
		                android:text="@string/main_settingsButton"
		                android:drawableLeft="@drawable/settings"
		                android:id="@+id/main_settingsButton"
		                android:layout_weight="1"
		                android:layout_width="fill_parent"></Button>
	            </LinearLayout>
	            <LinearLayout
	            	android:layout_height="fill_parent"
	            	android:orientation="horizontal"
	            	android:id="@+id/main_middleButtonsLayout"
	            	android:layout_width="fill_parent"
	            	android:layout_weight="1">
	                <Button
		        		android:textAppearance="?android:attr/textAppearanceLarge"
		                android:text="@string/main_callButton"
		                android:layout_width="fill_parent"
		                android:id="@+id/main_callButton"
		                android:layout_height="wrap_content"
		                android:drawableLeft="@drawable/call"
		                android:layout_gravity="center_vertical"
		                android:layout_weight="1"></Button>
	                <Button
	                	android:textAppearance="?android:attr/textAppearanceLarge"
		                android:text="@string/main_exitButton"
		                android:id="@+id/main_exitButton"
		                android:layout_height="wrap_content"
		                android:drawableLeft="@drawable/exit"
		                android:layout_gravity="center_vertical"
		                android:layout_weight="1"
		                android:layout_width="fill_parent"></Button>
		    	</LinearLayout>
            </LinearLayout>
            <LinearLayout
	            android:layout_width="wrap_content"
	            android:orientation="vertical"
	            android:id="@+id/main_progressBarLayout"
	            android:layout_height="fill_parent"
	            android:layout_gravity="top|right"
	            android:layout_weight="1">
	            <TextView
	                android:layout_width="wrap_content"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:layout_height="wrap_content"
	                android:text="@string/main_progressTitle"
	                android:id="@+id/main_progessTitle"></TextView>
                <LinearLayout
	            	android:layout_width="fill_parent"
	            	android:layout_height="fill_parent"
	            	android:orientation="horizontal">
	            	<FrameLayout
	            		android:layout_width="wrap_content"
	            		android:layout_height="wrap_content"
	            		android:layout_weight="1"></FrameLayout>
		           	<org.surveydroid.android.VerticalProgressBar
		           		android:layout_width="wrap_content"
		           		android:layout_height="fill_parent"
	   					android:progressDrawable="@drawable/progress_vertical"
		           		android:id="@+id/main_progressBar"></org.surveydroid.android.VerticalProgressBar>
	            	<FrameLayout
	            		android:layout_width="wrap_content"
	            		android:layout_height="wrap_content"
	            		android:layout_weight="1"></FrameLayout>
		        </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
