<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    	xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/text_scale_topLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:layout_gravity="center_horizontal|center_vertical">
    <TextView
	    android:text="@string/question_loading_text"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:layout_height="wrap_content"
	    android:id="@+id/text_scale_question"
	    android:layout_width="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginBottom="10dip"></TextView>
	    
	<!-- Dummy view -->
    <FrameLayout
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"></FrameLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:id="@+id/text_scale_textLayout">
	    <TextView
	    	android:layout_width="wrap_content"
	    	android:id="@+id/text_scale_lowText"
	    	android:layout_height="wrap_content"></TextView>
	    <!-- Dummy view -->
	    <FrameLayout
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"></FrameLayout>
	    <TextView
	    	android:layout_width="wrap_content"
	    	android:id="@+id/text_scale_highText"
	    	android:layout_height="wrap_content"></TextView>
	</LinearLayout>
	<SeekBar
		android:id="@+id/text_scale_slider"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:progress="50"></SeekBar>
    <!-- Dummy view -->
    <FrameLayout
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"></FrameLayout>
	
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/text_scale_buttonsLayout">
        <Button
        	android:id="@+id/text_scale_backButton"
        	android:text="@string/question_backButton"
        	android:layout_height="wrap_content"
        	android:layout_width="100dip"
        	android:layout_weight="1"></Button>
        <Button
        	android:id="@+id/text_scale_nextButton"
        	android:text="@string/question_nextButton"
        	android:layout_height="wrap_content"
        	android:layout_width="100dip"
        	android:layout_weight="1"></Button>
    </LinearLayout>
</LinearLayout>